# ai_research_team

./: README.md  email.md  pyproject.toml  report.md
src/ai_research_team/: crew.py  main.py
src/ai_research_team/config/: agents.yaml  tasks.yaml
