[project]
name = "ai_research_team"
version = "0.1.0"
description = "ai_research_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
ai_research_team = "ai_research_team.main:run"
run_crew = "ai_research_team.main:run"
train = "ai_research_team.main:train"
replay = "ai_research_team.main:replay"
test = "ai_research_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
